# pypix-api

./: .bandit  .env.exemplo  .gitignore  .pre-commit-config.yaml  .semgrep.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.Dev  Makefile  README.md  SECURITY.md  help.py  openapi.yaml  pyproject.toml  rec_methods.py  tox.ini
.devcontainer/: devcontainer.json
.docker/: install_dependencies.sh
.docker/zsh/powerlevel10k/: .p10k.zsh
.github/: README.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bank_support.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: auto-merge-dependabot.yml  cd.yml  ci-cd.yml  ci.yml  dependency-review.yml  docs.yml  release.yml  security-scorecard.yml  security.yml  stale.yml
docs/: CI_CD_GUIDE.md  PRE_COMMIT_GUIDE.md  README.md  SECURITY_IMPLEMENTATION.md  TESTING_COVERAGE_GUIDE.md  TYPE_CHECKING_GUIDE.md  conf.py  index.rst
docs/api/: auth.rst  banks.rst  models.rst  scopes.rst  utils.rst
docs/examples/: bb_basic.rst  error_handling.rst  recurring.rst  sicoob_basic.rst  webhooks.rst
examples/: README.md  observability_demo.py
pypix_api/: __init__.py  error_handling.py  logging.py  metrics.py  observability.py
pypix_api/auth/: mtls.py  oauth2.py
pypix_api/banks/: base.py  bb.py  cob_methods.py  cobr_methods.py  cobv_methods.py  rec_methods.py  sicoob.py  solic_rec_methods.py
pypix_api/banks/methods/: cob_methods.py  cobv_methods.py  pix_methods.py  rec_methods.py  solic_rec_methods.py
pypix_api/models/: pix.py
pypix_api/scopes/: __init__.py  registry.py
pypix_api/utils/: http_client.py
scripts/: bump_version.py  release.py  setup_pre_commit.sh
tests/: __init__.py  conftest.py  test_auth.py  test_bankpixapibase_cobmethods.py  test_bankpixapibase_cobvmethods.py  test_bankpixapibase_recmethods.py  test_bankpixapibase_solicrecmethods.py  test_banks.py  test_models.py  test_utils.py
tests/benchmarks/: __init__.py  test_oauth_performance.py
tests/tests_integration/: __init__.py  test_sicoob_pix_api_cob.py  test_sicoob_pix_api_pix.py
tests/tests_mock/: __init__.py  test_auth.py  test_bankpixapibase_cobmethods.py  test_bankpixapibase_cobrmethods.py  test_bankpixapibase_cobvmethods.py  test_bankpixapibase_lotecobvmethods.py  test_bankpixapibase_pixmethods.py  test_bankpixapibase_recmethods.py  test_bankpixapibase_solicrecmethods.py  test_logging.py
tests_integration/: test_sicoob_pix_api.py
